summer-jaeb/tests/compile_fail/policy_on_dead_letter.stderr
error: subscription policy attributes (retries, retry_strategy, retry_base_ms, retry_max_ms, dead_letter, priority) are not supported on DeadLetter listeners
 --> tests/compile_fail/policy_on_dead_letter.rs:7:1
  |
7 | fn on_dead_letter(event: &DeadLetter) -> HandlerResult {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `DeadLetter` and `HandlerResult`
 --> tests/compile_fail/policy_on_dead_letter.rs:3:12
  |
3 | use jaeb::{DeadLetter, HandlerResult};
  |            ^^^^^^^^^^  ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
